--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://10.15.18.251:3308/UserManageTest?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/UserManageTest?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
