--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/UserManageTest?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=${DB_PASSWORD01}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 spring.jpa.hibernate.ddl-auto=update
+logging.level.com.example.springproject.controller=OFF
